# tap-as-a-service

./: .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .zuul.yaml  API_REFERENCE.rst  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
deliverables/train/: tap-as-a-service.yaml
devstack/: README.rst  devstackgaterc  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  mirroring_sriov_ports.rst  mirroring_with_ovs_driver.rst  tap_mirrors_under_the_hood.rst  usage.rst
etc/: policy-generator.conf  taas.ini
etc/neutron/: policy.yaml.sample
etc/oslo-config-generator/: taas.ini  taas_agent.ini  taas_plugin.ini
neutron_taas/: opts.py
neutron_taas/cmd/: i40e_sysfs_cmd.py
neutron_taas/common/: config.py  utils.py
neutron_taas/db/: taas_db.py  tap_mirror_db.py
neutron_taas/db/migration/alembic_migration/: env.py
neutron_taas/db/migration/alembic_migration/versions/: EXPAND_HEAD  start_neutron_taas.py
neutron_taas/db/migration/alembic_migration/versions/2025.1/expand/: f8f1f10ebaf9_mirroring_for_taas.py
neutron_taas/db/migration/alembic_migration/versions/newton/contract/: 1817af933379_remove_network_id_from_tap_service.py  2ecce0368a62_add_foreign_key_constraint_on_tap_id_association.py  4086b3cffc01_rename_tenant_to_project.py  80c85b675b6e_initial_newton_no_op_contract_script.py
neutron_taas/db/migration/alembic_migration/versions/newton/expand/: 04625466c6fa_initial_newton_no_op_expand_script.py  fddbdec8711a_add_status.py
neutron_taas/db/migration/alembic_migration/versions/pike/contract/: bac61f603e39_alter_tap_id_associations_to_support_tap_id_reuse.py
neutron_taas/db/migration/alembic_migration/versions/stein/expand/: ccbcc559d175_add_vlan_filter_to_tap_flow.py
neutron_taas/extensions/: taas.py  tap_mirror.py  tap_mirror_both_direction.py  vlan_filter.py
neutron_taas/policies/: __init__.py  tap_flow.py  tap_mirror.py  tap_service.py
neutron_taas/services/taas/: taas_plugin.py  tap_mirror_plugin.py
neutron_taas/services/taas/agents/: taas_agent_api.py
neutron_taas/services/taas/agents/common/: taas_agent.py
neutron_taas/services/taas/agents/extensions/: taas.py
neutron_taas/services/taas/drivers/linux/: ovs_taas.py  ovs_utils.py  sriov_nic_exceptions.py  sriov_nic_taas.py  sriov_nic_utils.py
neutron_taas/services/taas/service_drivers/: __init__.py  service_driver_context.py  taas_agent_api.py  taas_rpc.py
neutron_taas/services/taas/service_drivers/ovn/: helper.py  taas_ovn.py
neutron_taas/services/taas/service_drivers/ovn/ovsdb/: impl_idl_taas.py
neutron_taas/taas_client/osc/: tap_flow.py  tap_mirror.py  tap_service.py
neutron_taas/tests/: base.py
neutron_taas/tests/unit/db/: test_migrations.py  test_taas_db.py  test_tap_mirror_db.py
neutron_taas/tests/unit/extensions/: test_taas.py  test_tap_mirror.py  test_vlan_filter.py
neutron_taas/tests/unit/policies/: test_tap_flow.py  test_tap_mirror.py  test_tap_service.py
neutron_taas/tests/unit/services/drivers/: test_linux_ovs_taas.py  test_linux_sriov_nic_driver.py  test_linux_sriov_utils.py
neutron_taas/tests/unit/services/ovn/: test_helper.py  test_taas_ovn.py
neutron_taas/tests/unit/services/ovn/ovsdb/: test_impl_idl_taas.py
neutron_taas/tests/unit/services/taas/: test_taas_plugin.py  test_tap_mirror_plugin.py
neutron_taas/tests/unit/taas_client/: test_cli20_tapflow.py  test_cli20_tapservice.py
neutron_taas/tests/unit/taas_client/osc/: fakes.py  test_osc_tap_flow.py  test_osc_tap_mirror.py  test_osc_tap_service.py
playbooks/legacy/tempest-dsvm-tap-as-a-service/: run.yaml
releasenotes/notes/: bp-port-mirroring-sriov-vf-879bc2aa53c2c8d4.yaml  tap-mirror-with-ovn-driver-ff26bc79d3d411be.yaml  tap-mirror-with-ovs-driver-7f09654e1e960a0d.yaml
releasenotes/source/: conf.py  index.rst
specs/mitaka/: tap-as-a-service.rst
tools/: test-setup.sh
