[metadata]
name = tap-as-a-service
summary = Tap-as-a-Service (TaaS) is an extension to the OpenStack network service (Neutron), it provides remote port mirroring capability for tenant virtual networks.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    neutron_taas

data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/taas-i40e-sysfs.filters

scripts =
    bin/i40e_sysfs_command

[entry_points]
neutron.agent.l2.extensions =
    taas = neutron_taas.services.taas.agents.extensions.taas:TaasAgentExtension
neutron_taas.taas.agent_drivers =
    ovs = neutron_taas.services.taas.drivers.linux.ovs_taas:OvsTaasDriver
    sriov = neutron_taas.services.taas.drivers.linux.sriov_nic_taas:SriovNicTaasDriver
neutron.service_plugins =
    taas = neutron_taas.services.taas.taas_plugin:TaasPlugin
    tapmirror = neutron_taas.services.taas.tap_mirror_plugin:TapMirrorPlugin
neutron.db.alembic_migrations =
    tap-as-a-service = neutron_taas.db.migration:alembic_migration
oslo.config.opts =
    neutron.taas = neutron_taas.opts:list_opts
    neutron.taas.agent = neutron_taas.opts:list_agent_opts
oslo.policy.policies =
    tap-as-a-service = neutron_taas.policies:list_rules
neutron.policies =
    tap-as-a-service = neutron_taas.policies:list_rules
openstack.neutronclient.v2 =
    tap_service_create = neutron_taas.taas_client.osc.tap_service:CreateTapService
    tap_service_list = neutron_taas.taas_client.osc.tap_service:ListTapService
    tap_service_show = neutron_taas.taas_client.osc.tap_service:ShowTapService
    tap_service_delete = neutron_taas.taas_client.osc.tap_service:DeleteTapService
    tap_service_update = neutron_taas.taas_client.osc.tap_service:UpdateTapService
    tap_flow_create = neutron_taas.taas_client.osc.tap_flow:CreateTapFlow
    tap_flow_list = neutron_taas.taas_client.osc.tap_flow:ListTapFlow
    tap_flow_show = neutron_taas.taas_client.osc.tap_flow:ShowTapFlow
    tap_flow_delete = neutron_taas.taas_client.osc.tap_flow:DeleteTapFlow
    tap_flow_update = neutron_taas.taas_client.osc.tap_flow:UpdateTapFlow
    tap_mirror_create = neutron_taas.taas_client.osc.tap_mirror:CreateTapMirror
    tap_mirror_list = neutron_taas.taas_client.osc.tap_mirror:ListTapMirror
    tap_mirror_show = neutron_taas.taas_client.osc.tap_mirror:ShowTapMirror
    tap_mirror_delete = neutron_taas.taas_client.osc.tap_mirror:DeleteTapMirror
    tap_mirror_update = neutron_taas.taas_client.osc.tap_mirror:UpdateTapMirror


[pbr]
autodoc_index_modules = True
warnerrors = True

